k8s/checker.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: checker
  namespace: monitor-page
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: checker
    spec:
      containers:
      - name: master
        image: registry.example.url/d0ku/monitor_page_checker:%LATEST_HASH%
        resources:
          requests:
            cpu: 20m
            memory: 20Mi
          limits:
            cpu: 100m
            memory: 100Mi
      imagePullSecrets:
      - name: regcred
