k8s/comparator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comparator
  namespace: monitor-page
spec:
  selector:
    matchLabels:
      app: comparator
  replicas: 2
  template:
    metadata:
      labels:
        app: comparator
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
        workHorse: "yes"
      containers:
      - name: master
        image: registry.example.url/d0ku/monitor_page_comparator:%LATEST_HASH%
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 600m
            memory: 900Mi
      imagePullSecrets:
      - name: regcred
