k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: monitor-page
  namespace: monitor-page
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: monitor
    spec:
      containers:
      - name: master
        image: registry.example.url/d0ku/monitor_page
        resources:
          requests:
            cpu: 20m
            memory: 20Mi
          limits:
            cpu: 400m
            memory: 350Mi
      imagePullSecrets:
      - name: regcred
