k8s/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: monitor-page
spec:
  selector:
    matchLabels:
      app: front
  replicas: 1
  template:
    metadata:
      labels:
        app: front
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
        workHorse: "yes"
      containers:
      - name: master
        image: registry.example.url/d0ku/monitor_page_front:%LATEST_HASH%
        resources:
          requests:
            cpu: 20m
            memory: 20Mi
          limits:
            cpu: 200m
            memory: 200Mi
      imagePullSecrets:
      - name: regcred
