k8s/manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manager
  namespace: monitor-page
spec:
  selector:
    matchLabels:
      app: manager
  replicas: 1
  template:
    metadata:
      labels:
        app: manager
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
        workHorse: "yes"
      containers:
      - name: master
        image: registry.example.url/d0ku/monitor_page_manager:%LATEST_HASH%
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 40m
            memory: 40Mi
          limits:
            cpu: 300m
            memory: 300Mi
      imagePullSecrets:
      - name: regcred
