k8s/screenshoter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: screenshoter
  namespace: monitor-page
spec:
  selector:
    matchLabels:
      app: screenshoter
  replicas: 2
  template:
    metadata:
      labels:
        app: screenshoter
    spec:
      containers:
      - name: master
        image: registry.example.url/d0ku/monitor_page_screenshoter:%LATEST_HASH%
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 400m
            memory: 600Mi
      imagePullSecrets:
      - name: regcred
