k8s/sender.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sender
  namespace: monitor-page
spec:
  selector:
    matchLabels:
      app: sender
  replicas: 2
  template:
    metadata:
      labels:
        app: sender
    spec:
      containers:
      - name: master
        ports:
        - containerPort: 8080
        image: registry.example.url/d0ku/monitor_page_sender:latest
        resources:
          requests:
            cpu: 20m
            memory: 20Mi
          limits:
            cpu: 100m
            memory: 100Mi
      imagePullSecrets:
      - name: regcred
