k8s/comparator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comparator
  namespace: monitor-page
  labels:
    app: comparator
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: comparator
