k8s/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: monitor-page
  labels:
    app: front
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: front
