k8s/manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manager
  namespace: monitor-page
  labels:
    app: manager
spec:
  ports:
  - port: 3000
    protocol: TCP
  selector:
    app: manager
