k8s/screenshoter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: screenshoter
  namespace: monitor-page
  labels:
    app: screenshoter
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: screenshoter
