k8s/sender-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sender
  namespace: monitor-page
  labels:
    app: sender
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: sender
